data/derived/comb/progs/unify/prog8218.ml.out
Characters 160-170:
  |h'::t' -> if List.length t' > 0 then mulByDigit @ [carry h i + remainder h' i] else [remainder h i];;
                                        ^^^^^^^^^^
Error: This expression has type int -> 'a list -> 'b list
       but an expression was expected of type 'c list
